--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,13 @@
 /* UTILITIES */
+/* FUENTE */
 /* backgrounds */
 /* ESTILOS GENERALES */
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-family: "Marcellus SC", serif;
+  letter-spacing: 2px; }
 
 /* ESTILOS DEL HEADER */
 header #cabecera {
@@ -16,13 +19,19 @@ header #cabecera {
   align-items: center;
   height: 100px;
   background-color: #303841; }
+  header #cabecera a {
+    text-decoration: none; }
+    header #cabecera a h1 {
+      font-size: 50px;
+      color: white; }
   header #cabecera button {
     gap: 10px;
     background-color: #D72323;
     color: white;
     font-weight: bold;
     width: 6rem;
-    height: 2.5rem; }
+    height: 2.5rem;
+    font-size: medium; }
     header #cabecera button:hover {
       transform: scale(0.9); }
 
@@ -46,18 +55,18 @@ body {
 
 /* ESTILOS DEL INDEX */
 #tienda {
-  max-width: 100vw;
-  margin: 50px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 40px; }
-  #tienda .producto {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 300px);
+  gap: 50px;
+  padding: 100px;
+  justify-content: center;
+  align-content: center; }
+  #tienda .card {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    max-width: 300px;
-    height: auto;
+    gap: 15px;
+    max-width: 350px;
+    height: 520px;
     padding: 20px;
     border: 1px solid black;
     background-color: #3A4750;
@@ -69,23 +78,31 @@ body {
     -moz-border-radius: 22px 22px 112px 22px;
     -webkit-border-radius: 22px 22px 112px 22px;
     border: 0px solid #000000; }
-    #tienda .producto .producto__img {
-      width: 100%;
-      height: auto; }
-    #tienda .producto h3,
-    #tienda .producto p,
-    #tienda .producto button {
-      align-self: center; }
-    #tienda .producto button {
-      width: 150px;
-      height: 30px;
-      background-color: #D72323;
-      color: white;
-      font-weight: bold;
-      width: 6rem;
-      height: 2.5rem; }
-      #tienda .producto button:hover {
-        transform: scale(0.9); }
+    #tienda .card img {
+      width: 250px;
+      height: 275px; }
+    #tienda .card .card-body {
+      text-transform: uppercase;
+      display: flex;
+      flex-direction: column;
+      gap: 15px; }
+      #tienda .card .card-body .card-title {
+        align-self: justify; }
+      #tienda .card .card-body .card-text {
+        font-size: larger;
+        font-weight: bold;
+        align-self: center; }
+      #tienda .card .card-body .card-buttons {
+        display: flex;
+        justify-content: space-around; }
+        #tienda .card .card-body .card-buttons button {
+          background-color: #D72323;
+          color: white;
+          font-weight: bold;
+          width: 6rem;
+          height: 2.5rem; }
+          #tienda .card .card-body .card-buttons button:hover {
+            transform: scale(0.9); }
 
 .modal-contenedor {
   position: fixed;
@@ -108,58 +125,84 @@ body {
 .modal-carrito {
   position: relative;
   background-color: white;
-  min-width: 500px;
+  min-width: 70%;
   padding: 20px;
   margin-top: -100%;
   transition: all .5s; }
+  .modal-carrito h3 {
+    color: black;
+    padding-bottom: 5px; }
+  .modal-carrito #carritoCerrar {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    font-size: 20px;
+    color: #303841;
+    border: none; }
+    .modal-carrito #carritoCerrar:hover {
+      cursor: pointer; }
+    .modal-carrito #carritoCerrar:focus {
+      outline: none; }
+  .modal-carrito .precioProducto {
+    padding-top: 10px;
+    margin: 10px;
+    font-weight: bold; }
+  .modal-carrito #vaciarCarrito {
+    background-color: #D72323;
+    color: white;
+    font-weight: bold;
+    width: 6rem;
+    height: 2.5rem;
+    width: 150px;
+    color: black;
+    font-size: medium; }
+    .modal-carrito #vaciarCarrito:hover {
+      transform: scale(0.9); }
 
 .modal-active .modal-carrito {
   margin-top: 0; }
 
-.modal-carrito h3 {
-  color: royalblue;
-  padding-bottom: 5px; }
-
-.modal-carrito #carritoCerrar {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  font-size: 20px;
-  color: royalblue;
-  border: none;
-  background-color: white; }
-
-.modal-carrito #carritoCerrar:hover {
-  cursor: pointer; }
-
-.modal-carrito #carritoCerrar:focus {
-  outline: none; }
-
-.modal-carrito .precioProducto {
-  padding-top: 10px; }
-
 .productoEnCarrito {
-  border-left: 5px solid lightblue;
+  border-left: 5px solid #131414;
   border-bottom-left-radius: 3px;
   border-top-left-radius: 3px;
   margin: 5px 0;
   padding: 5px 10px;
   display: flex;
   justify-content: space-between; }
-
-.productoEnCarrito:hover {
-  border-left: 5px solid royalblue; }
-
-.boton-eliminar {
-  background-color: white;
-  color: red;
-  border: none;
-  font-size: 20px; }
-
-.boton-eliminar:hover {
-  cursor: pointer; }
-
-.boton-eliminar:focus {
-  outline: none; }
+  .productoEnCarrito:hover {
+    border-left: 5px solid #303841; }
+  .productoEnCarrito p {
+    padding: 10px;
+    font-weight: bold; }
+  .productoEnCarrito .removeModalBtn {
+    background-color: white;
+    color: #303841;
+    border: none;
+    font-size: 20px;
+    padding-left: 20px; }
+    .productoEnCarrito .removeModalBtn:hover {
+      cursor: pointer; }
+    .productoEnCarrito .removeModalBtn:focus {
+      outline: none; }
 
 /* MEDIA QUERIES */
+/* ESTILOS DEL HEADER */
+@media (max-width: 480px) {
+  header #cabecera h1 {
+    font-size: 220% !important; }
+  .productoEnCarrito .nombreProdModal {
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 50px;
+    text-overflow: " [..]"; }
+  .productoEnCarrito .removeModalBtn {
+    background-color: white;
+    color: #303841;
+    border: none;
+    font-size: 20px;
+    padding-left: 20px; }
+    .productoEnCarrito .removeModalBtn:hover {
+      cursor: pointer; }
+    .productoEnCarrito .removeModalBtn:focus {
+      outline: none; } }
