--- a/sass/parciales/_layouts.scss
+++ b/sass/parciales/_layouts.scss
@@ -9,9 +9,18 @@ header {
     align-items: center;
     height: 100px;
     background-color: $bgCabecera;
+    a{
+      text-decoration: none;
+      h1{
+        font-size: 50px;
+        color: white;
+      }
+    }
+    
     button {
       gap: 10px;
       @include botones;
+      font-size: medium;
     }
   }
 }
