--- a/sass/parciales/_mq.scss
+++ b/sass/parciales/_mq.scss
@@ -1,1 +1,39 @@
 /* MEDIA QUERIES */
+
+/* ESTILOS DEL HEADER */
+
+@media(max-width: 480px){
+    header {
+        #cabecera {
+            h1{
+              font-size: 220% !important;
+            }
+          }
+        }
+
+        
+        .productoEnCarrito {
+
+            .nombreProdModal{
+                white-space: nowrap;
+                overflow: hidden;
+                max-width: 50px;
+                text-overflow: " [..]";
+            }
+            .removeModalBtn {
+                background-color: white;
+                color: #303841;
+                border: none;
+                font-size: 20px;
+                padding-left: 20px;
+                &:hover {
+                    cursor: pointer;
+                }
+                &:focus {
+                    outline: none;
+                }
+            }
+        }
+        
+}
+  
