--- a/sass/parciales/views/_index.scss
+++ b/sass/parciales/views/_index.scss
@@ -1,37 +1,50 @@
 /* ESTILOS DEL INDEX */
 #tienda {
-    max-width: 100vw;
-    margin: 50px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 40px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 300px);
+    gap: 50px;
+    padding: 100px;
+    justify-content: center;
+    align-content: center;
 
-    .producto {
+    .card {
       display: flex;
       flex-direction: column;
-      gap: 10px;
-      max-width: 300px;
-      height: auto;
+      gap: 15px;
+      max-width: 350px;
+      height: 520px;
       padding: 20px;
       border: 1px solid black;
       @include productCard;
-      .producto__img {
-        width: 100%;
-        height: auto;
+      img {
+        width: 250px;
+        height:275px;
+        
       }
-      h3,
-      p,
-      button {
-        align-self: center;
+      .card-body{
+        text-transform: uppercase;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        .card-title {
+            align-self: justify;
+        }
+        .card-text{
+            font-size: larger;
+            font-weight: bold;
+            align-self: center;
+        }
+        .card-buttons{
+            display: flex;
+            justify-content: space-around;
+            button {
+                @include botones;
+              }
+
+        }
       }
-      button {
-        width: 150px;
-        height: 30px;
-        @include botones;
       }
     }
-  }
 
   .modal-contenedor {
     position: fixed;
@@ -56,63 +69,72 @@
 .modal-carrito {
     position: relative;
     background-color: white;
-    min-width: 500px;
+    min-width: 70%;
     padding: 20px;
     margin-top: -100%;
     transition: all .5s;
+    h3 {
+        color: black;
+        padding-bottom: 5px;
+    }
+    #carritoCerrar {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        font-size: 20px;
+        color: #303841;
+        border: none;
+        &:hover {
+            cursor: pointer;
+        }
+        &:focus {
+            outline: none;
+        }
+    }
+    .precioProducto {
+        padding-top: 10px;
+        margin: 10px;;
+        font-weight: bold;
+        
+    }
+    #vaciarCarrito{
+        @include botones;
+        width: 150px;
+        color: black;
+        font-size: medium;
+    }
 }
 
 .modal-active .modal-carrito {
     margin-top: 0;
 }
 
-.modal-carrito h3 {
-    color: royalblue;
-    padding-bottom: 5px;
-}
-.modal-carrito #carritoCerrar {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    font-size: 20px;
-    color: royalblue;
-    border: none;
-    background-color: white;
-}
-.modal-carrito #carritoCerrar:hover {
-    cursor: pointer;
-}
-.modal-carrito #carritoCerrar:focus {
-    outline: none;
-}
-.modal-carrito .precioProducto {
-    padding-top: 10px;
-    
-}
-
 .productoEnCarrito {
-    border-left: 5px solid lightblue;
+    border-left: 5px solid rgb(19, 20, 20);
     border-bottom-left-radius: 3px;
     border-top-left-radius: 3px;
     margin: 5px 0;
     padding: 5px 10px;
     display: flex;
     justify-content: space-between;
-}
-.productoEnCarrito:hover {
-    border-left: 5px solid royalblue;
-}
-
-.boton-eliminar {
-    background-color: white;
-    color: red;
-    border: none;
-    font-size: 20px;
-}
-
-.boton-eliminar:hover {
-    cursor: pointer;
-}
-.boton-eliminar:focus {
-    outline: none;
+    &:hover{
+        border-left: 5px solid #303841;
+    }
+    p{
+        padding: 10px;
+        font-weight: bold;
+    }
+    .removeModalBtn {
+        background-color: white;
+        color: #303841;
+        border: none;
+        font-size: 20px;
+        padding-left: 20px;
+        &:hover {
+            cursor: pointer;
+        }
+        &:focus {
+            outline: none;
+        }
+    }
 }
